Use primary color rather than primary light for focus and is-selected styles to avoid lighter hover color being used on mobile devices.

--- a/client/components/segmented-control/style.scss
+++ b/client/components/segmented-control/style.scss
@@ -85,7 +85,7 @@
 				color: var( --color-text-inverted );
 
 				&:focus {
-					background-color: var( --color-primary-light );
+					background-color: var( --color-primary );
 				}
 			}
 
